# JNI-By-Examples

./: CMakeLists.txt
java/com/webank/wedpr/ot/kkrt/: Demo.java  NativeInterface.java  OtData.java  OtResult.java  Receiver.java  Sender.java
java/in/derros/jni/: Utilities.java
